addons/traefik/traefik-kubernetes-crd/traefik-dashboard/traefik-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-dashboard
  namespace: traefik-ingress
  labels:
    k8s-app: traefik-ingress-dashboard
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  selector:
    k8s-app: traefik-ingress
  ports:
    - name: dashboard
      port: 8080
      protocol: TCP
      targetPort: dashboard
