addons/traefik/traefik-kubernetes-crd/traefik-dashboard/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-dashboard-http
  namespace: traefik-ingress
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`traefik-dashboard.fdisk.cc`)
      services:
      - name: traefik-ingress-dashboard
        kind: Service
        namespace: traefik-ingress
        port: 8080
      middlewares:
        - name: to-https
          namespace: traefik-ingress

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-dashboard-https
  namespace: traefik-ingress
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`traefik-dashboard.fdisk.cc`)
      services:
      - name: traefik-ingress-dashboard
        kind: Service
        namespace: traefik-ingress
        port: 8080
  tls:
    secretName: wildcard-fdisk-cc
